ci: add cleanup step to nightly release self-hosted runner jobs (#2510)
<!-- .github/pull_request_template.md -->

## 📌 Description

<!-- What does this PR do? Briefly describe the changes and why they’re
needed. -->

Fix intermittent `EACCES: permission denied` error in nightly release
workflow when `actions/checkout@v4` tries to clean the workspace on
reused self-hosted runners.

The root cause: Docker containers run as root and create root-owned
files (e.g., `.pytest_cache/.gitignore`). On the next run, the runner
process (non-root) cannot delete these files, causing checkout to fail.

Fix: Add a cleanup step (with `sudo rm`) before checkout in the two
self-hosted runner jobs (`build-flashinfer-jit-cache` and
`test-nightly-build`). This is the same pattern used in
`pr-test-runner.yml`.

Example error:
https://github.com/flashinfer-ai/flashinfer/actions/runs/21736799287/job/62713877213

## 🔍 Related Issues

<!-- Link any related issues here -->

## 🚀 Pull Request Checklist

Thank you for contributing to FlashInfer! Before we review your pull
request, please make sure the following items are complete.

### ✅ Pre-commit Checks

- [x] I have installed `pre-commit` by running `pip install pre-commit`
(or used your preferred method).
- [x] I have installed the hooks with `pre-commit install`.
- [x] I have run the hooks manually with `pre-commit run --all-files`
and fixed any reported issues.

> If you are unsure about how to set up `pre-commit`, see [the
pre-commit documentation](https://pre-commit.com/).

## 🧪 Tests

- [x] Tests have been added or updated as needed.
- [ ] All tests are passing (`unittest`, etc.).

## Reviewer Notes

<!-- Optional: anything you'd like reviewers to focus on, concerns, etc.
-->

cc: @yzh119 @bkryu @dierksen 


<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
* Improved CI/CD pipeline efficiency by adding cleanup procedures to
automated workflows. This includes clearing Dock

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -130,6 +130,14 @@ jobs:
     runs-on: [self-hosted, linux, "${{ matrix.arch == 'aarch64' && 'arm64' || 'x64' }}", cpu, on-demand]
 
     steps:
+      - name: Cleanup
+        run: |
+          docker stop $(docker ps -q) 2>/dev/null || true
+          docker rm $(docker ps -aq) 2>/dev/null || true
+          sudo rm -rf ${{ github.workspace }}/* || true
+          sudo rm -rf ${{ github.workspace }}/.[!.]* || true
+          docker system prune -f || true
+
       - name: Display Machine Information
         run: |
           echo "CPU: $(nproc) cores, $(lscpu | grep 'Model name' | cut -d':' -f2 | xargs)"
@@ -280,6 +288,14 @@ jobs:
     runs-on: [self-hosted, linux, x64, gpu, sm86, on-demand]
 
     steps:
+      - name: Cleanup
+        run: |
+          docker stop $(docker ps -q) 2>/dev/null || true
+          docker rm $(docker ps -aq) 2>/dev/null || true
+          sudo rm -rf ${{ github.workspace }}/* || true
+          sudo rm -rf ${{ github.workspace }}/.[!.]* || true
+          docker system prune -f || true
+
       - name: Display Machine Information
         run: |
           echo "CPU: $(nproc) cores, $(lscpu | grep 'Model name' | cut -d':' -f2 | xargs)"
