ci: fix H100 cleanup (#2590)
<!-- .github/pull_request_template.md -->

## 📌 Description

<!-- What does this PR do? Briefly describe the changes and why they’re
needed. -->

- Fix H100 Docker cleanup to only stop containers from this runner
(shared
  multi-runner node has multiple runners on one 8-GPU instance)

## 🔍 Related Issues

<!-- Link any related issues here -->

## 🚀 Pull Request Checklist

Thank you for contributing to FlashInfer! Before we review your pull
request, please make sure the following items are complete.

### ✅ Pre-commit Checks

- [x] I have installed `pre-commit` by running `pip install pre-commit`
(or used your preferred method).
- [x] I have installed the hooks with `pre-commit install`.
- [x] I have run the hooks manually with `pre-commit run --all-files`
and fixed any reported issues.

> If you are unsure about how to set up `pre-commit`, see [the
pre-commit documentation](https://pre-commit.com/).

## 🧪 Tests

- [x] Tests have been added or updated as needed.
- [x] All tests are passing (`unittest`, etc.).

## Reviewer Notes

<!-- Optional: anything you'd like reviewers to focus on, concerns, etc.
-->


<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
* CI workflow now stops only runner-owned containers and more
aggressively prunes unused containers and builders to free resources.
* GPU diagnostics run only for the selected GPUs while still exposing
the GPU selection setting.
* Cleanup sequence refined to preserve unrelated containers and caches
on shared runners, improving stability for concurrent jobs.

* **Bug Fixes**
* Spot/job analysis now skips cancelled jobs and better detects
runner/infrastructure communication errors, reducing false-positive
terminations.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -551,19 +551,20 @@ jobs:
     steps:
       - name: Cleanup
         run: |
-          # Stop all Docker containers to free GPU memory
-          docker stop $(docker ps -q) 2>/dev/null || true
-          docker rm $(docker ps -aq) 2>/dev/null || true
-          # Clean workspace and caches
+          # Shared multi-runner node: only stop containers started by THIS runner (identified by workspace mount)
+          for cid in $(docker ps -q); do
+            if docker inspect "$cid" --format '{{json .Mounts}}' 2>/dev/null | grep -qF "${{ github.workspace }}/"; then
+              docker stop "$cid" 2>/dev/null || true
+            fi
+          done
           sudo rm -rf ${{ github.workspace }}/* || true
           sudo rm -rf ${{ github.workspace }}/.[!.]* || true
           rm -rf ~/.cache/flashinfer_jit || true
+          docker container prune -f 2>/dev/null || true
           docker image prune -f || true
           docker builder prune -f --filter "until=24h" || true
-          # Show GPU info (should show 1 GPU due to CUDA_VISIBLE_DEVICES)
-          echo "=== GPU Info ==="
-          nvidia-smi || true
           echo "CUDA_VISIBLE_DEVICES=$CUDA_VISIBLE_DEVICES"
+          nvidia-smi -i "$CUDA_VISIBLE_DEVICES" || true
 
       - uses: actions/checkout@v4
         with:
